syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message System {
  int32 id = 1;
  string name = 2;
  bool public = 3;
  google.protobuf.Timestamp createdAt = 4;
  string basedOn = 5;
  string shortDescription = 6;
}

message ViewSystem {
  int32 id = 1;
  string name = 2;
  bool public = 3;
  google.protobuf.Timestamp createdAt = 4;
  string basedOn = 5;
  string shortDescription = 6;
  int32 moduleId = 7;
  int32 menuId = 8;
  int32 headerImgId = 9;
  string headerImgUrl = 10;
  int32 thumbnailImgId = 11;
  string thumbnailImgUrl = 12;
  int32 avatarImgId = 13;
  string avatarImgUrl = 14;
  repeated int32 tags = 15;
}
